fix navigation of main content
The arrows had to be adjusted as they did not align with the writing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -449,10 +449,6 @@ a.pageNumber {
 .multiplePages {
   letter-spacing: 0; }
 
-.prev, .next {
-  text-decoration: none;
-  color: white; }
-
 .subscribeText {
   font-size: 2rem;
   color: white; }
@@ -474,6 +470,10 @@ a.pageNumber {
 .copyright {
   color: #86859c;
   font-size: 0.7rem; }
+
+.prev a, .next a {
+  text-decoration: none;
+  color: white; }
 
 .footerWrapper {
   background-color: #5F6EDC;
@@ -524,7 +524,7 @@ a.pageNumber {
 
 .footerNav ul {
   position: relative;
-  margin-right: 1.5em; }
+  margin: 1em 1.5em 0 0; }
 
 .footerNav ul li.toTopText {
   position: absolute;
@@ -532,7 +532,7 @@ a.pageNumber {
   left: -1em; }
 
 .footerNav p {
-  margin-left: 2em; }
+  margin: 1em 0 0em 2em; }
 
 .copyright {
   margin-left: 1.5em; }
@@ -579,6 +579,7 @@ a.active {
 .header-vertical-text {
   float: left;
   transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);
   font-size: 1rem;
   text-transform: uppercase;
   margin: 2em 0 0 0.8em; }
@@ -646,8 +647,7 @@ a.readMore {
   background-color: #38375c; }
   .postNav ul {
     display: flex;
-    list-style: none;
-    padding-top: 0.3em; }
+    list-style: none; }
 
 a.pageNumber {
   margin-right: 0.5em;
@@ -658,18 +658,60 @@ a.pageNumber {
   background-color: #1FBCD7;
   color: white !important; }
 
-.leftArrow {
-  padding: 0 0.5em 0 1em; }
+.arrow-left.icon {
+  color: #86859c;
+  position: absolute;
+  margin-left: 3px;
+  margin-top: 10px;
+  width: 18px;
+  height: 2px;
+  background-color: currentColor; }
 
-.rightArrow {
-  padding: 0 1em 0 0.5em; }
+.arrow-left.icon:before {
+  content: '';
+  position: absolute;
+  left: 1px;
+  top: -3px;
+  width: 6px;
+  height: 6px;
+  border-top: solid 2px currentColor;
+  border-right: solid 2px currentColor;
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg); }
+
+div.arrow-left.icon {
+  margin: 1.5em; }
 
 .prev {
-  padding-right: 1.5em;
+  margin: 0.5em 0 0.4em 3em;
+  padding: 0.5em 2.2em 0.5em 1em;
   border-right: 1px solid #86859c; }
 
+.arrow-right.icon {
+  color: #86859c;
+  position: absolute;
+  width: 18px;
+  height: 2px;
+  background-color: currentColor; }
+
+.arrow-right.icon:before {
+  content: '';
+  position: absolute;
+  right: 1px;
+  top: -3px;
+  width: 6px;
+  height: 6px;
+  border-top: solid 2px currentColor;
+  border-right: solid 2px currentColor;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+div.arrow-right.icon {
+  margin: 1.5em 9em; }
+
 .next {
-  padding-left: 1.5em;
+  margin: 0.5em 0 0.4em 3em;
+  padding: 0.5em 4em 0.5em 2.2em;
   border-left: 1px solid #86859c; }
 
 .search-field {
