--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -55,7 +55,7 @@
 
 .footerNav ul {
   position: relative;
-  margin-right: 1.5em;
+  margin: 1em 1.5em 0 0;
 }
 
 .footerNav ul li.toTopText {
@@ -65,7 +65,7 @@
 }
 
 .footerNav p {
-  margin-left: 2em;
+  margin: 1em 0 0em 2em;
 }
 
 .copyright {
@@ -79,3 +79,5 @@
   left: 17px;
   font-size: 16px;
 }
+
+
