--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -43,6 +43,7 @@ a.active {
 .header-vertical-text {
   float: left;
   transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);
   font-size: 1rem;
   text-transform: uppercase;
   margin: 2em 0 0 0.8em;
