--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -57,7 +57,6 @@ a.readMore {
   ul {
     display: flex;
     list-style: none;
-    padding-top: 0.3em;
   }
 }
 
@@ -72,22 +71,67 @@ a.pageNumber {
   color: white !important;
 }
 
-.leftArrow {
-  padding: 0 0.5em 0 1em;
+.arrow-left.icon {
+  color: $secondary-grey;
+  position: absolute;
+  margin-left: 3px;
+  margin-top: 10px;
+  width: 18px;
+  height: 2px;
+  background-color: currentColor;
 }
 
-.rightArrow {
-  padding: 0 1em 0 0.5em;
+.arrow-left.icon:before {
+  content: '';
+  position: absolute;
+  left: 1px;
+  top: -3px;
+  width: 6px;
+  height: 6px;
+  border-top: solid 2px currentColor;
+  border-right: solid 2px currentColor;
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+div.arrow-left.icon {
+  margin: 1.5em;
 }
 
 .prev {
-  padding-right: 1.5em;
+  margin: 0.5em 0 0.4em 3em;
+  padding: 0.5em 2.2em 0.5em 1em;
   border-right: 1px solid $secondary-grey;
 }
 
-.next {
-  padding-left: 1.5em;
-  border-left: 1px solid $secondary-grey;
+.arrow-right.icon {
+  color: $secondary-grey;
+  position: absolute;
+  width: 18px;
+  height: 2px;
+  background-color: currentColor;
 }
 
+.arrow-right.icon:before {
+  content: '';
+  position: absolute;
+  right: 1px;
+  top: -3px;
+  width: 6px;
+  height: 6px;
+  border-top: solid 2px currentColor;
+  border-right: solid 2px currentColor;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+div.arrow-right.icon {
+  margin: 1.5em 9em;
+}
+
+.next {
+  margin: 0.5em 0 0.4em 3em;
+  padding: 0.5em 4em 0.5em 2.2em;
+  border-left: 1px solid $secondary-grey;
+}
 
